{
    "name": "Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e119260d-8653-4fbd-93eb-dabe95b8d97b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "caec3f30-c34f-49ed-976b-9957b17da076",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Cursor",
                    "type": "Value",
                    "id": "5b3f3994-8fb8-4e8c-9c8c-05bd45addf95",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveBasic",
                    "type": "Button",
                    "id": "4c4d4c74-b31f-4808-a96c-1da4a9366872",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move1",
                    "type": "Button",
                    "id": "b6fb8580-5494-420a-a07c-a0075e5ec263",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move2",
                    "type": "Button",
                    "id": "80347215-0072-4055-b665-86e37d3bc0cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move3",
                    "type": "Button",
                    "id": "2dd74c9d-b48a-4f7c-958a-98439998fc5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAimingAssistant",
                    "type": "Button",
                    "id": "42ce0fe8-42be-4e0e-a26c-535d6918c35d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "b0bcb8fd-3870-4a5b-bf1a-c52ffd53d323",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PullBackCamera",
                    "type": "Button",
                    "id": "27e0ddc4-a3d0-436d-ad1e-c3d7a03fb0de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "62d5d15f-e8ab-4fd2-94c9-e7d37760585f",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "67207c37-2c0a-49dd-b46a-972dcc606a7c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b6aa0def-d1aa-44e6-8ba4-7d72e6d884ad",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a4fddeb5-e558-459f-9267-b0f688f361a5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e45a10a1-0ad8-46e0-aba1-8c5552c72020",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f535d420-2310-4ee7-b164-1265619a10f1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "85e32b72-1a15-4cec-8cac-e2b66363ae1a",
                    "path": "<HID::BDA NSW wired controller>/button8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBasic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bcc4111-eb61-4ba6-9bc6-97b80d1ae9da",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBasic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3695180-af64-437f-be6e-3f6a0efa6e2b",
                    "path": "<HID::BDA NSW wired controller>/button7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b912a4a8-0d4f-4ba8-8ef6-9605d29fada2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54fb91e9-7257-4f98-bec2-64195154f498",
                    "path": "<HID::BDA NSW wired controller>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30ab575d-7734-4727-a34e-4e8f070aea77",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43b78870-a9bd-49e3-a4ad-d270a3d1362c",
                    "path": "<HID::BDA NSW wired controller>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8956a914-654c-4411-9edb-d78e9cb4cb49",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19785162-ad17-4dea-bb4d-229feec9a20c",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8506494-0a67-4208-9ffe-fe20c3e46344",
                    "path": "<HID::BDA NSW wired controller>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAimingAssistant",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ba57d5c-5c17-4e52-8c53-f20246c774f4",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a733cfe7-8201-453d-ae70-6f234ed3efc2",
                    "path": "<HID::BDA NSW wired controller>/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41de91ae-30f8-4705-9348-a0dcd7304aa6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PullBackCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a4f34f9-a868-4a44-92e5-616173f0b812",
                    "path": "<HID::BDA NSW wired controller>/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PullBackCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}